# prefix-manager

./: Cargo.toml  README.md
src/: api.rs  lib.rs
src/api/: client.rs  releases.rs
