[package]
name = "prefix-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
reqwest = { version = "0.12.28", default-features = false, features = ["stream", "rustls-tls"] }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
tokio = { version = "1.48.0", default-features = false, features = ["rt-multi-thread", "fs"] }
serde_json = "1.0.147"
thiserror = "2.0.17"
url = "2.5.7"
sha2 = "0.10.9"
hex = "0.4.3"
flate2 = { version = "1.1.5", features = ["zlib-rs"] }
tar = "0.4.44"
